docs: updated docs about querying

--- a/docs/content/querying-with-vyne/writing-queries.mdx
+++ b/docs/content/querying-with-vyne/writing-queries.mdx
@@ -200,6 +200,9 @@ the source object in an attempt to look up the value.
 
 
 ## Submitting queries
+Generally, developers will use the UI to write and test their queries, then
+integrate using Vyne's rest API.
+
 
 ### Rest API
 
