docs(pipelines): added screenshot of ui

--- a/docs/content/reference/pipelines-2.0/pipelines-overview.mdx
+++ b/docs/content/reference/pipelines-2.0/pipelines-overview.mdx
@@ -76,7 +76,12 @@ Although all pipelines are persisted as json files, they can be created either t
 or authored as json directly.
 
 ### Creating a pipeline using the UI
+The Vyne WebUI provides a wizard for building pipelines.
 
+Click on the Pipeline Manager in the left-hand navigation bar, and complete the form
+to create a pipeline.
+
+![](./pipeline-wizard-empty.png)
 
 ### Creating a pipeline through configuration
 Pipelines are authored and stored in json files, with a file per pipeline.
