--- a/docs/content/how-to-guides/schema-management/enable-ui-schema-editing.mdx
+++ b/docs/content/how-to-guides/schema-management/enable-ui-schema-editing.mdx
@@ -59,7 +59,7 @@ We need to add the path to our newly created taxi project into our config file.
 </Callout>
 
  * If there's already a `file {}` block in your config file, add your path to the `paths` block, on a new line.
- * If not, copy and paste the below section into your config file, setting the `path` to th
+ * If not, copy and paste the below section into your config file, setting the `path` to the desired one:
 
 ```HOCON
 file {
