--- a/docs/content/background/understanding-semantics/tips-on-taxonomies.mdx
+++ b/docs/content/background/understanding-semantics/tips-on-taxonomies.mdx
@@ -4,7 +4,6 @@ description: Practices and pitfalls when creating an enterprise taxonomy
 ---
 
 import {Callout} from "../../components/callout";
-import {MultiCodeBlock} from "gatsby-theme-apollo-docs";
 
 ## Overview
 Vyne is a data integration & querying platform, built on top of the Taxi schema language.
@@ -28,10 +27,10 @@ enterprise domain models.
 
 
 ### Types are intended for sharing
-Types don't have structure.  In software terms, Types are referred to as Scalar - ie., they don't contain any
+Types don't have structure.  In software terms, Types are referred to as Scalar - i.e., they don't contain any
 attributes or fields.  Things like `String` or `Number` are typical examples of scalars.
 
-In Vyne and Taxi, Types take on a semantic meaning, ie., `CustomerFirstName` instead of `String`.
+In Vyne and Taxi, Types take on a semantic meaning, i.e., `CustomerFirstName` instead of `String`.
 
 <Callout title='Best practice recommendation' type='hint'>
 
