--- a/docs/content/how-to-guides/schema-management/enable-ui-schema-editing.mdx
+++ b/docs/content/how-to-guides/schema-management/enable-ui-schema-editing.mdx
@@ -23,7 +23,7 @@ which can accept edits from the Vyne UI.
 <Callout type='hint' title='Before you begin'>
 
    This guide assumes you already have a taxi project that you want to make editable.
-   If not, you might want to follow our guide on <Link to={""}>creating a new taxi project</Link> first.
+   If not, you might want to follow our guide on <Link to="./create-a-taxi-project">creating a new taxi project</Link> first.
 
 </Callout>
 
