Use a config option to be able to type the error handlers more nicely.

--- a/docs/content/reference/pipelines-2.0/pipelines-error-handling.mdx
+++ b/docs/content/reference/pipelines-2.0/pipelines-error-handling.mdx
@@ -48,8 +48,10 @@ Pipelines provide means to push all the message and item level errors into a com
     {
       "errorType": "item",
       "type": "kafka",
-      "connectionName" : "my-kafka-connection",
-      "topic" : "CustomerEventItemErrors",
+      "config": {
+        "connectionName" : "my-kafka-connection",
+        "topic" : "item_errors"
+      }
     }
   ]
 }
