--- a/docs/content/release-notes/0.20.0.mdx
+++ b/docs/content/release-notes/0.20.0.mdx
@@ -10,7 +10,7 @@ import {Link} from 'gatsby';
 
 Vyne now has integration with OpenID for authentication, and role based authorisation.
 
- * Tutorial in configuring Vyne with Keycloak - a popular open source OpenID platform
+ <!--- * Tutorial in configuring Vyne with Keycloak - a popular open source OpenID platform -->
  * <Link to={'/reference/auth/authentication/'}>Authentication docs</Link>
  * <Link to={'/reference/auth/authorization/'}>Configuring role based authorisation</Link>
 
@@ -30,15 +30,15 @@ Pipelines are experimental in 0.20, and we're excited to make them available as 
 We've overhauled the internal expression engine, to make it more consistent, and more powerful.
 
 You can leverage complex expressions, which - in turn - leverage [expression types](#expression-types), allowing for
-very rich
+very rich queries and transformations.
 
 See:
 
  * <Link to="/querying-with-vyne/writing-queries/#expressions-in-queries">Expressions in queries</Link>
  * <Link to='/querying-with-vyne/writing-queries/#expressions-on-a-type'>Expression types</Link>
 
-## Expression types
-Expressions can be extracted
+<!--- ## Expression types
+Expressions can be extracted -->
 
 
 ## New connection import wizard
@@ -47,8 +47,7 @@ In order to help get started with Vyne, we've build a connection and schema impo
 tool.
 
 This lets you onboard databases, APIs, Kafka topics, AWS connections and more, without
-writing any code, and without writing any code, and without updating
-the publisher applications.
+writing any code, and without updating the publisher applications.
 
 Take it for a spin as part of our new <Link to='/tutorials/api-db-integration/rest-db-integration/'>Getting Started</Link> tutorial.
 
